# summerizer_flask_app

./: .gitignore  README.md  docker_run.py  dockerfile  pyproject.toml  tox.ini
docs/: modules.rst  summerizer_flask.rst  summerizer_flask.services.models.rst  summerizer_flask.services.rst  summerizer_flask.views.rst
docs/source/: conf.py  index.rst
summerizer_flask/: __init__.py  main.py
summerizer_flask/services/core/: config.ini  summarizer.py  utils.py
summerizer_flask/services/models/: summarizer_model.py
summerizer_flask/views/: summarize.py
tests/: base_test.py  test_summarize_model.py  test_summarize_resources.py  test_summarizer_service.py  test_utils.py
