[tool.poetry]
name = "summerizer_flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.12.2"
Flask = "^2.0.2"
Flask-RESTful = "^0.3.9"
torch = "^1.10.0"
langdetect = "^1.0.9"
tox = "^3.25.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
